style and class

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <h1>Awesome books</h1>
     <div id="list" class="list"></div>
+    <div class="add-new-book">
+      <div class="black-line"></div>
+      <h2>Add new book</h2>
+    </div>
     <div id="addNew">
       <form name="book" id="form">
         <input
@@ -26,7 +30,9 @@
           placeholder="Author"
           required
         /><br /><br />
-        <button type="submit" id="addButton" class="btn">Add</button>
+        <div class="addButton">
+          <button type="submit" id="addButton" class="btn">Add</button>
+        </div>
       </form>
     </div>
 
