--- a/index.html
+++ b/index.html
@@ -8,73 +8,71 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header">
-        <h1 class="full">Awesome books</h1>
-        <nav>
-          <ul class="nav-list">
-            <li>
-              <a href="#" id="navList" onclick="displaySection('list')">List</a>
-            </li>
-            <li>
-              <a href="#" id="navNew" onclick="displaySection('form')"
-                >Add New</a
-              >
-            </li>
-            <li>
-              <a href="#" id="navContact" onclick="displaySection('contact')"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <p id="date" class="date"></p>
-    </header>
-    <main>
-      <div id="list" class="list">
-        <ul id="book-list"></ul>
-      </div>
-      <hr />
-      <div id="addNew">
-        <div>
-          <h3 class="bookTitle" id="bookTitle">Add a New book</h3>
+
+<!-- ...///navbar...// -->
+    <nav class="title nav">
+       <a href="index.html"> <h3> Awesome Books. </h3></a>
+        <div class="links">
+            <ul class="ul-links">
+                <li class="listLink">
+                    <a id="list-link" href="#" class="links">List</a>
+                </li>
+                <li class="listLink">
+                    <a id="add-link" href="#" class="links">Add New</a>
+                </li>
+                <li class="listLink">
+                    <a id="contact-link" href="#" class="links">Contact</a>
+                </li>
+            </ul>
         </div>
-        <div class="form">
-          <form name="book" id="form">
-            <input
-              type="text"
-              id="title"
-              name="title"
-              placeholder="Title"
-              required
-            /><br /><br />
-            <input
-              type="text"
-              id="author"
-              name="title"
-              placeholder="Author"
-              required
-            /><br /><br />
-            <button type="submit" id="addButton" class="btn">Add</button>
-          </form>
-        </div>
-        <div id="contact" class="contact">
-          <p>
-            If you have any questions or you just want to say "Hello". You can
-            reach us to.
-          </p>
-          <ul>
-            <li>Our email: <a href="#">mail@mail.com</a></li>
-            <li>Our twitter: <a href="#">@awesomeBooks</a></li>
-            <li>Our github: <a href="#">@awesomeBooks</a></li>
-          </ul>
-        </div>
+    </nav>
+
+        <div class="date">January 10th 2023. 04:30pm.</div>
+
+    <div class="full">
+    <h1>All Awesome Books</h1>
+    <div id="list" class="list"></div>
+    <div id="addNew" class="hide">
+      <h2>Add a New book</h2>
+      <form name="book" id="form">
+        <input
+          type="text"
+          id="title"
+          name="title"
+          placeholder="Title"
+          required
+        /><br /><br />
+        <input
+          type="text"
+          id="author"
+          name="title"
+          placeholder="Author"
+          required
+        /><br /><br />
+        <button type="submit" id="addButton" class="btn">Add</button>
+      </form>
+    </div>
       </div>
-    </main>
-    <footer class="footer">
-      <h3>Copyright &copy;</h3>
-    </footer>
+
+   <!-- ...../// contact section..// -->
+      <div id="contact-section" class="hide">
+         <h2>Contact information:</h2>
+         <p class="contact-text">Do you have any question or you just want to say "Hello"?, <br>
+          You can reach out to us on:</p>
+         <div class="contact-list">
+         <ul class="contact-list1">
+             <li>Our email: mail@mail.com.</li>
+             <li>Our phone number: 0000000000.</li>
+             <li>Our address: Streethome 34, bill city.</li>
+         </ul>
+     </div>
+      </div>
+
+    <!-- ......///footer.../// -->
+      <footer>
+         <p class="copyrights">Copyrights  ...</p>
+      </footer>
+
 
     <script src="scripts.js"></script>
   </body>
